--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <nav>
         <div>
+            <div><img src="#" alt="#"></div>
             <a href="#">Home</a>
             <a href="#">Shop</a>
             <a href="#">Contact Us</a>
