--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-    
+    <nav>
+        <div>
+            <div><img src="#" alt="#"></div>
+            <a href="#">Home</a>
+            <a href="#">Shop</a>
+            <a href="#">Contact Us</a>
+            <a href="#">About Us</a>
+        </div>
+    </nav>
 </body>
 </html>
