--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <nav>
-        <div>
-            <div><img src="#" alt="#"></div>
-            <a href="#">Home</a>
-            <a href="#">Shop</a>
-            <a href="#">Contact Us</a>
-            <a href="#">About Us</a>
+        <div class="navbar">
+            <button class="navbut"><a href="#">Home</a></button>
+            <button class="navbut"><a href="#">Shop</a></button>
+            <button class="navbut"><a href="#">Contact Us</a></button>
+            <button class="navbut"><a href="#">About Us</a></button>    
         </div>
-    </nav>
 </body>
 </html>
